simplify tests + start adding invitations
